# jclaw

./: .env.example  .gitignore  .jclaw-pids.json  CLAUDE.md  PORTING_STATUS.md  README.md  check_db.py  package.json  pyproject.toml  requirements.txt  test_jclaw_standalone.py  todo.md
.claude/: settings.json
.claude/skills/add-discord/: SKILL.md
config-examples/: litellm.kobold.yaml
container/: Dockerfile
docs/: PYTHON_MIGRATION_NOTES.md  docker-sandboxes.md
groups/main/: CLAUDE.md
repo-tokens/: README.md
scripts/: auto-configure-env.py  check-local-llm.bat  check-local-llm.py  dashboard.py  generate-env.py  run-local-e2e.ps1  run_migrations.py  setup-local-windows.ps1  start-kobold-proxy.ps1  test-container-skills.ps1  validate-setup.py
setup_py/: __init__.py  container.py  environment.py  groups.py  index.py  mounts.py  platform.py  register.py  service.py  status.py  verify.py
src/: __init__.py  cli.py  config.py  container_runner.py  container_runtime.py  context_guard.py  credential_proxy.py  db.py  env.py  feature_flags.py  group_folder.py  group_queue.py  hooks.py  host_browser.py  index.py  ipc.py  logger.py  main.py  memory.py  model_gateway.py  model_registry.py  mount_security.py  profiles.py  protocol_adapter.py  remote_control.py  router.py  schema.py  sender_allowlist.py  services.py  task_scheduler.py  timezone.py  types.py  ui.py
src/channels/: __init__.py  console.py  index.py  registry.py
tests/: test_container_runner.py  test_context_guard.py  test_memory.py  test_model_gateway.py  test_schema.py  test_task_scheduler.py
(+32 files in other folders)
