[project]
name = "jclaw"
version = "1.2.21"
description = "J Claw Python runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "croniter>=2.0,<3.0",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["src*"]

[project.scripts]
jclaw = "src.main:main"
jclaw-chat = "src.main:main"
